14-Ingress-SSL-with-LetsEncrypt/kube-manifests/03-Ingress-SSL-Resource/01-Ingress-SSL.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: zpp1.benighil-mohamed.com
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: app1-nginx-clusterip-service
              port:
                number: 80
          path: /
  - host: zpp2.benighil-mohamed.com  
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: app2-nginx-clusterip-service
              port:
                number: 80
          path: / 
  tls:
  - hosts:
    - zpp1.benighil-mohamed.com
    secretName: pp1-benighil-secret           
  - hosts:
    - zpp2.benighil-mohamed.com
    secretName: pp2-benighil-secret
